# gsi-dem

./: .gitignore  CLAUDE.md  Cargo.toml  QGIS_PLUGIN_INTEGRATION.md  README.md  README_PYTHON.md  dist-workspace.toml  pyproject.toml
.cargo/: config.toml
.github/: cargo-dist-envvars.yml
.github/workflows/: ci.yml  lint-and-test.yml  release-crates.io.yml  release.yml
dem_converter/: Cargo.toml  README.md
dem_converter/src/: geotiff_writer.rs  lib.rs  main.rs  xml_parser.rs
dem_converter/tests/: cli_workflow_test.rs
examples/: benchmark.rs  qgis_plugin_example.py
japan-dem-cli/: Cargo.toml
japan-dem-cli/src/: main.rs
japan-dem-py/: Cargo.toml
japan-dem-py/src/: lib.rs
python/tests/: test_parser.py
src/: error.rs  lib.rs  main.rs  model.rs  python.rs  terrain_rgb.rs  zip_handler.rs
src/parser/: mod.rs
src/writer/: mod.rs
