[workspace]
members = [".", "japan-dem-cli", "japan-dem-py"]
resolver = "2"

[package]
name = "japan-dem"
version = "0.1.4"
edition = "2021"
authors = ["nokonoko1203 <email@example.com>"]
description = "A library to convert Japan DEM XML to GeoTIFF."
readme = "README.md"
repository = "https://github.com/nokonoko1203/japan-dem"
license = "MIT"
keywords = ["gis", "dem", "geotiff", "japan", "gsi"]
categories = ["science::geo"]
exclude = [
    "test_dir/*",
    "test_output/*",
    ".github/*",
    "examples/*",
    "python/*",
    "*.tif",
    "*.xml",
]

[lib]
name = "japan_dem"
crate-type = ["rlib"]

[features]
default = []
bundled = ["gdal/bundled"]

[dependencies]
anyhow = "1.0.98"
gdal = "0.18"
quick-xml = "0.37.5"
rayon = "1.10.0"
thiserror = "2.0.12"
tracing = "0.1.41"
zip = "2.2"

[dev-dependencies]
tempfile = "3.20.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# TODO: remove this when the pull request gets merged into the upstream
[patch.crates-io]
gdal = { git = "https://github.com/yutannihilation/gdal-rs", branch = "feat/expose-bundled-feature" }
