[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "gsi-dem"
version = "0.1.0"
description = "Python bindings for GSI DEM XML parser"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README_PYTHON.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["python"]
module-name = "gsi_dem"
# python-source = "python"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "numpy>=1.20",
    "maturin>=1.7",
]