[package]
name = "dem_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.31.0"
geotiff = "0.7.0"
clap = { version = "4.4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
