[package]
name = "dem_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.31.0"
# The latest published version of `geotiff` on crates.io is 0.0.2.
# Version 0.7.0 referenced previously does not exist in the index,
# causing dependency resolution to fail.  Use the available release
# instead so that the crate can be built without errors.
geotiff = "0.0.2"
clap = { version = "4.4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
