[package]
name = "japan-dem-cli"
version = "0.1.4"
edition = "2021"
authors = ["nokonoko1203 <email@example.com>"]
description = "CLI tool for japan-dem - converts Japan DEM XML to GeoTIFF"
readme = "../README.md"
repository = "https://github.com/nokonoko1203/japan-dem"
license = "MIT"
keywords = ["gis", "dem", "geotiff", "japan", "gsi"]
categories = ["command-line-utilities", "science::geo"]

[[bin]]
name = "japan-dem"
path = "src/main.rs"

[dependencies]
japan-dem = { path = "..", version = "0.1.4", features = ["bundled"]}
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
