[package]
name = "japan-dem-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Python bindings for japan-dem - converts Japan DEM XML to GeoTIFF"
readme = "../README_PYTHON.md"
repository.workspace = true
license.workspace = true
keywords = ["gis", "dem", "geotiff", "japan", "gsi"]
categories = ["api-bindings", "science::geo"]
publish = false

[lib]
name = "japan_dem"
crate-type = ["cdylib"]

[dependencies]
japan-dem = { path = "..", features = ["bundled"]}
pyo3.workspace = true
